# puh3_obstetrics_predictor

./: .gitignore  README.md  index.html  prompt_project.md
backend/: .gitignore  backend.py  pcos_database.db  pyproject.toml
frontend/: index.html  package.json  pnpm-lock.yaml  vite.config.js
frontend/src/: App.vue  main.js
