[project]
name = "puh3-obstetrics-predictor"
version = "0.1.0"
description = "Assessment of Pregnancy-Related Disease Risks in Repeat Pregnancies"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[standard]>=0.115.12",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "python-multipart>=0.0.20",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.41",
]
